--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
           <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
               <div class="contacts-icons">
-                <svg class="icon" width="16" height="12">
+                <svg class="header-mail" width="16" height="12">
                   <use href="./images/icons.svg#icon-envelope1"></use>
                 </svg>
-                
                 info@devstudio.com
               </div>
             </a>
@@ -47,7 +46,7 @@
           <li class="item">
             <a class="link" href="tel:380961111111">
               <div class="contacts-icons">
-                <svg class="icon" width="10" height="16">
+                <svg class="header-phone" width="10" height="16">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
@@ -57,13 +56,14 @@
         </ul>
       </div>
     </header>
-    <!-- основная секция -->
+
+    <!-- ОСНОВНАЯ СЕКЦИЯ -->
     <main>
       <!--  Hero секция -->
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
-          <button class="button-hero" type="button">Заказать услугу</button>
+          <button class="button-hero" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -118,9 +118,24 @@
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list">
-            <li class="item"><img src="./images/keyboard1.jpg" width="370" alt="клавиатура, монитор, лист бумаги"></li>
-            <li class="item"><img src="./images/notebook2.jpg" width="370" alt="ноутбук с  вариантами дизайна"></li>
-            <li class="item"><img src="./images/tablet3.jpg" width="370" alt="планшетc палитрой цветов"></li>
+            <li class="item">
+              <div>
+                <img src="./images/keyboard1.jpg" width="370" alt="клавиатура, монитор, лист бумаги">
+                <p class="images-text">Десктопные приложения</p> 
+              </div>
+            </li>
+            <li class="item">
+              <div>
+                <img src="./images/notebook2.jpg" width="370" alt="ноутбук с  вариантами дизайна">
+                <p class="images-text">Мобильные приложения</p>
+              </div>
+            </li>
+            <li class="item">
+              <div>
+                <img src="./images/tablet3.jpg" width="370" alt="планшетc палитрой цветов">
+                <p class="images-text">Дизайнерские решения</p>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -144,28 +159,28 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="social list">
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Instagramm">
+                    <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Twitter">
+                    <a href="https://twitter.com/" class="social-link" aria-label="Twitter">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Facebook">
+                    <a href="https://facebook.com/" class="social-link" aria-label="Facebook">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="LinkedIn">
+                    <a href="https://linkedin.com/" class="social-link" aria-label="LinkedIn">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
@@ -188,28 +203,28 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="social list">
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Instagramm">
+                    <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Twitter">
+                    <a href="https://twitter.com/" class="social-link" aria-label="Twitter">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Facebook">
+                    <a href="https://facebook.com/" class="social-link" aria-label="Facebook">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="LinkedIn">
+                    <a href="https://linkedin.com/" class="social-link" aria-label="LinkedIn">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
@@ -232,28 +247,28 @@
                 <p class="team-text">Marketing</p>
                 <ul class="social list">
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Instagramm">
+                    <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Twitter">
+                    <a href="https://twitter.com/" class="social-link" aria-label="Twitter">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Facebook">
+                    <a href="https://facebook.com/" class="social-link" aria-label="Facebook">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="LinkedIn">
+                    <a href="https://linkedin.com/" class="social-link" aria-label="LinkedIn">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
@@ -276,28 +291,28 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="social list">
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Instagramm">
+                    <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Twitter">
+                    <a href="https://twitter.com/" class="social-link" aria-label="Twitter">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="Facebook">
+                    <a href="https://facebook.com/" class="social-link" aria-label="Facebook">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="#" class="social-link" aria-label="LinkedIn">
+                    <a href="https://linkedin.com/" class="social-link" aria-label="LinkedIn">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
@@ -316,42 +331,42 @@
         <ul class="clients-list list">
           <li class="clients-item">
             <a href="#" class="clients-link" aria-label="Company site-1">
-              <svg class="clients-icon" width="44" height="49">
+              <svg class="clients-icon" width="41" height="47">
                 <use href="./images/icons.svg#icon-group1"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="#" class="clients-link" aria-label="Company site-2">
-              <svg class="clients-icon" width="44" height="49">
+              <svg class="clients-icon" width="40" height="52">
                 <use href="./images/icons.svg#icon-group2"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="#" class="clients-link" aria-label="Company site-3">
-              <svg class="clients-icon" width="44" height="49">
+              <svg class="clients-icon" width="48" height="44">
                 <use href="./images/icons.svg#icon-group3"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="#" class="clients-link" aria-label="Company site-4">
-              <svg class="clients-icon" width="44" height="49">
+              <svg class="clients-icon" width="80" height="42">
                 <use href="./images/icons.svg#icon-group4"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="#" class="clients-link" aria-label="Company site-5">
-              <svg class="clients-icon" width="44" height="49">
+              <svg class="clients-icon" width="63" height="46">
                 <use href="./images/icons.svg#icon-group5"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a href="#" class="clients-link" aria-label="Company site-6">
-              <svg class="clients-icon" width="44" height="49">
+              <svg class="clients-icon" width="94" height="44">
                 <use href="./images/icons.svg#icon-group6"></use>
               </svg>
             </a>
@@ -402,14 +417,14 @@
                 </a>
               </li>
               <li class="network-item">
-                <a href="#" class="network-link" aria-label="Facebook">
+                <a href="https://facebook.com/" class="network-link" aria-label="Facebook">
                   <svg class="network-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook1"></use>
                   </svg>
                 </a>
               </li>
               <li class="network-item">
-                <a href="#" class="network-link" aria-label="LinkedIn">
+                <a href="https://linkedin.com/" class="network-link" aria-label="LinkedIn">
                   <svg class="network-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin1"></use>
                   </svg>
@@ -420,5 +435,12 @@
         </div>
       </div>   
     </footer>
+    <!-- блок модальноого окна -->
+    <div <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close" data-modal-close></button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html> 
