--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,7 @@
         </ul>
       </div>
     </header>
+    
     <!-- основная секция -->
     <main> 
       <section class="portfolio-section">
@@ -77,6 +78,11 @@
               <a class="portfolio-link" href="#">
                 <div class="portfolio-image">
                   <img src="./images/project1.jpg" width="370" alt="страница сайта Технокряк"/>
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Технокряк</h2>
@@ -86,16 +92,30 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img src="./images/project2.jpg" width="370" alt="два баскетболиста"/> 
+                <div class="portfolio-image">
+                  <img src="./images/project2.jpg" width="370" alt="два баскетболиста"/> 
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
-                </div>
+                </div> 
               </a>
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img src="./images/project3.jpg" width="370" alt="Ресторан Seafood"/>
+                <div class="portfolio-image">
+                  <img src="./images/project3.jpg" width="370" alt="Ресторан Seafood"/>
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -104,16 +124,31 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img src="./images/project4.jpg" width="370" alt="аудио наушники"/>
+                <div class="portfolio-image"> 
+                  <img src="./images/project4.jpg" width="370" alt="аудио наушники"/>
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content"> 
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
+                
               </a> 
             </li> 
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img src="./images/project5.jpg" width="370" alt="две коробки рядом"/>
+                <div class="portfolio-image"> 
+                  <img src="./images/project5.jpg" width="370" alt="две коробки рядом"/>
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -122,7 +157,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#"> 
-                <img src="./images/project6.jpg" width="370" alt="монитор с открытой веб-страницей"/>
+                <div class="portfolio-image">
+                 <img src="./images/project6.jpg" width="370" alt="монитор с открытой веб-страницей"/>
+                 <p class="portfolio-tooltip">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -130,8 +172,15 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="portfolio-link" href="#"> 
-                <img src="./images/project7.jpg" width="370" alt="разворот журнала Limited Edition"/>
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-image">
+                  <img src="./images/project7.jpg" width="370" alt="разворот журнала Limited Edition"/>
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -139,8 +188,15 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="portfolio-link" href="#"> 
-                <img src="./images/project8.jpg" width="370" alt="ярлык с надписью LAB EL TAG"/> 
+              <a class="portfolio-link" href="#">
+                <div class="portfolio-image"> 
+                  <img src="./images/project8.jpg" width="370" alt="ярлык с надписью LAB EL TAG"/> 
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Проект LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -149,7 +205,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img src="./images/project9.jpg" width="370" alt="монитор с открытым приложением"/>
+                <div class="portfolio-image"> 
+                  <img src="./images/project9.jpg" width="370" alt="монитор с открытым приложением"/>
+                  <p class="portfolio-tooltip">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-content"> 
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Приложение</p>
