--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list">
             <li class="item">
-              <div>
+              <div class="images-thumb">
                 <img src="./images/keyboard1.jpg" width="370" alt="клавиатура, монитор, лист бумаги">
                 <p class="images-text">Десктопные приложения</p> 
               </div>
             </li>
             <li class="item">
-              <div>
+              <div class="images-thumb">
                 <img src="./images/notebook2.jpg" width="370" alt="ноутбук с  вариантами дизайна">
                 <p class="images-text">Мобильные приложения</p>
               </div>
             </li>
             <li class="item">
-              <div>
+              <div class="images-thumb">
                 <img src="./images/tablet3.jpg" width="370" alt="планшетc палитрой цветов">
                 <p class="images-text">Дизайнерские решения</p>
               </div>
